--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cron": "^1.8.2",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "firebase": "^9.6.3",
+    "firebase-admin": "^10.0.1",
     "mongoose": "^6.1.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
