--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mongoose": "^6.1.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5"
   }
 }
