--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "dependencies": {
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
+    "@types/node-cron": "^3.0.1",
     "cron": "^1.8.2",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "firebase": "^9.6.3",
     "firebase-admin": "^10.0.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.1.0",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   },
